--- a/src/components/LeadersList.css
+++ b/src/components/LeadersList.css
@@ -118,4 +118,55 @@
   .leaders-wrapper {
     flex-direction: column;
   }
+
+  .avatar {
+    &__background {
+      z-index: 2;
+      top: 8px;
+      left: 32px;
+    }
+  }
+
+  .leader-card {
+    width: 100%;
+    height: 92px;
+    margin-right: 0px;
+    margin-bottom: 1px;
+
+    &__place {
+      top: -2px;
+      left: 0px;
+      width: 40px;
+      height: 18px;
+      line-height: 18px;
+    }
+
+    &__name {
+      top: 18px;
+      left: 116px;
+      right: 75px;
+      line-height: 18px;
+      width: auto;
+      font-size: 18px;
+      text-align: left;
+    }
+
+    &__star {
+      z-index: 2;
+      top: 10px;
+      left: auto;
+      right: 12px;
+      width: 40px;
+      height: 40px;
+    }
+
+    &__score {
+      z-index: 1;
+      bottom: 8px;
+      left: 80px;
+      right: 0;
+      padding-right: 6px;
+      text-align: right;
+    }
+  }
 }
