--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -1,5 +1,11 @@
+body {
+  overflow-x: hidden;
+}
+
 .App {
-  text-align: center;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
