--- a/src/containers/PeriodMenu.css
+++ b/src/containers/PeriodMenu.css
@@ -39,6 +39,7 @@
     line-height: 27px;
     background-color: var(--white);
     border-bottom: 1px solid var(--dark-peach);
+    padding-left: 22px;
 
     &__link {
       color: var(--purplish-grey);
